# ChangeLog for dev-db/phpmyadmin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.524 2014/09/20 11:05:25 ago Exp $

  20 Sep 2014; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.1.14.3.ebuild:
  Stable for alpha, wrt bug #520142

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.1.14.3.ebuild:
  Stable for ppc64, wrt bug #520142

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.1.14.3.ebuild:
  Stable for sparc, wrt bug #520142

  16 Sep 2014; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.1.14.3.ebuild:
  Stable for x86, wrt bug #520142

  16 Sep 2014; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.1.14.3.ebuild:
  Stable for amd64, wrt bug #520142

  16 Sep 2014; Jeroen Roovers <jer@gentoo.org> phpmyadmin-4.1.14.3.ebuild:
  Stable for HPPA (bug #520142).

*phpmyadmin-4.2.8.1 (13 Sep 2014)
*phpmyadmin-4.1.14.4 (13 Sep 2014)
*phpmyadmin-4.0.10.3 (13 Sep 2014)

  13 Sep 2014; Robin H. Johnson <robbat2@gentoo.org>
  +phpmyadmin-4.0.10.3.ebuild, +phpmyadmin-4.1.14.4.ebuild,
  +phpmyadmin-4.2.8.1.ebuild:
  Bump for security fix PMASA-2014-10.

*phpmyadmin-4.2.7.1 (21 Aug 2014)
*phpmyadmin-4.1.14.3 (21 Aug 2014)
*phpmyadmin-4.0.10.2 (21 Aug 2014)

  21 Aug 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +phpmyadmin-4.0.10.2.ebuild, +phpmyadmin-4.1.14.3.ebuild,
  +phpmyadmin-4.2.7.1.ebuild, -phpmyadmin-4.0.10.1.ebuild,
  -phpmyadmin-4.1.14.2.ebuild, -phpmyadmin-4.2.7.ebuild,
  phpmyadmin-4.1.7.ebuild:
  Another security bump for phpmyadmin (CVE-2014-{5273,5274}) - bug 520142. Drop
  unstable affected versions.

  14 Aug 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  -phpmyadmin-4.0.5.ebuild, -phpmyadmin-4.0.6.ebuild, -phpmyadmin-4.1.4.ebuild,
  -phpmyadmin-4.1.8.ebuild, -phpmyadmin-4.2.2.ebuild:
  Drop old and vulnerable versions.

*phpmyadmin-4.2.7 (14 Aug 2014)
*phpmyadmin-4.0.10.1 (14 Aug 2014)
*phpmyadmin-4.1.14.2 (14 Aug 2014)
