@@ -7,7 +7,7 @@ IUSE=setup vhosts
 KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~ppc-macos ~x64-macos ~x86-macos
 LICENSE=GPL-2
 RDEPEND=dev-lang/php[crypt,ctype,filter,json,session,unicode] || ( dev-lang/php[mysqli] dev-lang/php[mysql] ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
-SLOT=4.2.7.1
-SRC_URI=mirror://sourceforge/phpmyadmin/phpMyAdmin-4.2.7.1-all-languages.tar.xz
+SLOT=4.2.9
+SRC_URI=mirror://sourceforge/phpmyadmin/phpMyAdmin-4.2.9-all-languages.tar.xz
 _eclasses_=depend.php	df169a364e191b840b695604097e3c21	eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	phpconfutils	e108303831029e5b8a9d24b991b1d62a	toolchain-funcs	0f1760274637a138b99bb649202ea402	webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=bb3e85c5b3b395e0a0645920f3c5b70c
+_md5_=136d39494286531b8bf26746d1d48da2
